--- a/13042022/index.html
+++ b/13042022/index.html
@@ -34,7 +34,9 @@
         href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/111001" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute gibt es eine Wiederholung der Sendung vom 14.04.2021.</p>
+    <p>"Heute feiern wir mit Luis Fonsi, Freya Ridings, Brendon Urie von Panic at the Disco und Amy Diamond. Morgen hat Leonardo Da Vinci
+      Geburtstag. Seit 2017 wird am 15. April deshalb auch der Tag der Kunst gefeiert."</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
