--- a/vergangenesendungen/index.html
+++ b/vergangenesendungen/index.html
@@ -30,9 +30,13 @@
         <h1>Happy Birthday Show</h1>
         <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
         <h2>Vergangene Sendungen</h2>
+        <p><a href="https://happybirthdayshowhelsinki.github.io/13042022">13.04.2022</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/16032022">16.03.2022</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/16022022">16.02.2022</a></p>
-        <p><a href="https://happybirthdayshowhelsinki.github.io/19012022">19.01.2022</a></p>
+        <h3 class="jahr">2022</h3>
+        <p><span class="datum">19.01.2022 - WH 02.02.2022:</span><br>Mit Alvaro Soler, Mark Forster, Lisa Pac und Janis Joplin
+            <br><a href="https://helsinki.at/program/110998" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
+            <br><a href="https://cba.fro.at/537857" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
         <h3 class="jahr">2021</h3>
         <p><span class="datum">22.12.2021 - WH 05.01.2022:</span><br>Mit Taylor Swift, Chris Steger, Michael Patrick Kelly
             und Zara Larsson<br><a href="https://helsinki.at/program/105036" target="_blank">Programmhinweis auf der Radio
