--- a/11052022/index.html
+++ b/11052022/index.html
@@ -30,10 +30,13 @@
     <h1>Happy Birthday Show</h1>
     <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
     <h2><span class="wiederholung-2">Sendung am 11.05.2022 um 18:00 Uhr</span><span class="wiederholung-1">WH am 25.05. um 01:00 Uhr</span></h2>
-    <p>Sie können diese Sendung am 11.05.2022 von 18 bis 19 Uhr, sowie am 25.05.2022 von 1 bis 2 Uhr, in Graz auf der Frequenz 92,6 oder im <a
-        href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
+    <div class="col-md-6">
+      <iframe src="https://cba.fro.at/461861/embed?&waveform=false" width="100%" height="99"
+        style="border:none; width:100%; height:79px; margin-bottom: 10px;"></iframe>
+    </div>
     <p><a href="https://helsinki.at/program/111002" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
+    <p><a href="https://cba.fro.at/461861" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
     <p>Heute gibt es eine Wiederholung der Sendung vom 05.08.2020.</p>
     <p>"Heute feiern wir mit Helene Fischer, Carlos Vives, Shawn Mendes und Geri Halliwell von den Spice Girls. Am 1. August war der
       Nationalfeiertag der Schweiz, weil die Schweiz am 1. August 1291 gegründet wurde. Außerdem hat Neil Armstrong, der erste Mensch auf dem
