--- a/08062022/index.html
+++ b/08062022/index.html
@@ -34,7 +34,9 @@
         href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/111003" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute feiern wir mit Jason Mraz, Ariana Grande, Ryan Tedder von OneRepublic und Jennette McCurdy. Heute am 8. Juni ist der Tag des Meeres,
+      er soll darauf aufmerksam machen, dass die Ozeane für die Erde wichtig sind. Außerdem hat der österreichische Fußballer David Alaba am
+      24. Juni Geburtstag.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
