--- a/vergangenesendungen/index.html
+++ b/vergangenesendungen/index.html
@@ -30,10 +30,13 @@
         <h1>Happy Birthday Show</h1>
         <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
         <h2>Vergangene Sendungen</h2>
+        <p><a href="https://happybirthdayshowhelsinki.github.io/06072022">06.07.2022</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/08062022">08.06.2022</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/11052022">11.05.2022</a></p>
-        <p><a href="https://happybirthdayshowhelsinki.github.io/13042022">13.04.2022</a></p>
         <h3 class="jahr">2022</h3>
+        <p><span class="datum">13.04.2022 - WH 27.04.2022:</span><br>Wiederholung vom 14.04.2021: Mit Luis Fonsi, Freya Ridings, Brendon
+            Urie und Amy Diamond<br><a href="https://helsinki.at/program/111001" target="_blank">Programmhinweis auf der Radio Helsinki
+            Homepage</a><br><a href="https://cba.fro.at/496289" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
         <p><span class="datum">16.03.2022 - WH 30.03.2022:</span><br>Mit Lady Gaga, James Arthur, Camila Cabello und Bobby McFerrin
             <br><a href="https://helsinki.at/program/111000" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a><br>
             <a href="https://cba.fro.at/547371" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
