--- a/26102022/index.html
+++ b/26102022/index.html
@@ -19,7 +19,7 @@
   <meta name="msapplication-config" content="https://happybirthdayshowhelsinki.github.io/favicon/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
 
-  <title>Sendung am 13.04.2022 | Happy Birthday Show auf Radio Helsinki mit Christian Steinberger</title>
+  <title>Sendung am 26.10.2022 | Happy Birthday Show auf Radio Helsinki mit Christian Steinberger</title>
   <link rel="stylesheet" href="/styles/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="/styles/stylesheet.css">
@@ -29,17 +29,12 @@
   <div class="content">
     <h1>Happy Birthday Show</h1>
     <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
-    <h2><span class="wiederholung-2">Sendung am 13.04.2022 um 18:00 Uhr</span><span class="wiederholung-1">WH am 27.04. um 01:00 Uhr</span></h2>
-    <div class="col-md-6">
-      <iframe src="https://cba.fro.at/496289/embed?&waveform=false" width="100%" height="99"
-        style="border:none; width:100%; height:79px; margin-bottom: 10px;"></iframe>
-    </div>
-    <p><a href="https://helsinki.at/program/111001" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
+    <h2><span class="wiederholung-2">Sendung am 26.10.2022 um 18:00 Uhr</span><span class="wiederholung-1">WH am 09.11. um 01:00 Uhr</span></h2>
+    <p>Sie können diese Sendung am 26.10.2022 von 18 bis 19 Uhr, sowie am 09.11.2022 von 1 bis 2 Uhr, in Graz auf der Frequenz 92,6 oder im <a
+        href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
+    <p><a href="https://helsinki.at/program/111008" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p><a href="https://cba.fro.at/496289" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
-    <p>Heute gibt es eine Wiederholung der Sendung vom 14.04.2021.</p>
-    <p>"Heute feiern wir mit Luis Fonsi, Freya Ridings, Brendon Urie von Panic at the Disco und Amy Diamond. Morgen hat Leonardo Da Vinci
-      Geburtstag. Seit 2017 wird am 15. April deshalb auch der Tag der Kunst gefeiert."</p>
+    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
