--- a/03082022/index.html
+++ b/03082022/index.html
@@ -30,10 +30,13 @@
     <h1>Happy Birthday Show</h1>
     <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
     <h2><span class="wiederholung-2">Sendung am 03.08.2022 um 18:00 Uhr</span><span class="wiederholung-1">WH am 17.08. um 01:00 Uhr</span></h2>
-    <p>Sie können diese Sendung am 03.08.2022 von 18 bis 19 Uhr, sowie am 17.08.2022 von 1 bis 2 Uhr, in Graz auf der Frequenz 92,6 oder im <a
-        href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
+    <div class="col-md-6">
+      <iframe src="https://cba.fro.at/568414/embed?&waveform=false" width="100%" height="99"
+        style="border:none; width:100%; height:79px; margin-bottom: 10px;"></iframe>
+    </div>
     <p><a href="https://helsinki.at/program/111005" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
+    <p><a href="https://cba.fro.at/568414" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
     <p>Heute feiern wir mit Whitney Houston, Joe Jonas von den Jonas Brothers, Jonas Blue und Kina Grannis. Am 15. August ist der
       Nationalfeiertag von Liechtenstein. Außerdem ist am 5. August der internationale Tag der Verkehrsampel.</p>
   </div>
