--- a/vergangenesendungen/index.html
+++ b/vergangenesendungen/index.html
@@ -30,10 +30,14 @@
         <h1>Happy Birthday Show</h1>
         <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
         <h2>Vergangene Sendungen</h2>
+        <p><a href="https://happybirthdayshowhelsinki.github.io/03082022">03.08.2022</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/06072022">06.07.2022</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/08062022">08.06.2022</a></p>
-        <p><a href="https://happybirthdayshowhelsinki.github.io/11052022">11.05.2022</a></p>
         <h3 class="jahr">2022</h3>
+        <p><span class="datum">11.05.2022 - WH 25.05.2022:</span><br>Wiederholung vom 05.08.2020: Mit Helene Fischer, Carlos Vives,
+            Shawn Mendes und Geri Halliwell<br><a href="https://helsinki.at/program/111002" target="_blank">Programmhinweis auf der
+            Radio Helsinki Homepage</a><br><a href="https://cba.fro.at/461861" target="_blank">Sendung zum Nachhören auf der
+            CBA-Plattform</a></p>
         <p><span class="datum">13.04.2022 - WH 27.04.2022:</span><br>Wiederholung vom 14.04.2021: Mit Luis Fonsi, Freya Ridings, Brendon
             Urie und Amy Diamond<br><a href="https://helsinki.at/program/111001" target="_blank">Programmhinweis auf der Radio Helsinki
             Homepage</a><br><a href="https://cba.fro.at/496289" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
