--- a/31082022/index.html
+++ b/31082022/index.html
@@ -34,7 +34,8 @@
         href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/111006" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute feiern wir mit Howie Dorough von den Backstreet Boys, Amy Macdonald, Felix Jaehn und Alizée. Am 25. August war der Nationalfeiertag
+      von Uruguay. Außerdem hatte der jamaikanische Sportler Usain Bolt am 21. August Geburtstag.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
