--- a/vergangenesendungen/index.html
+++ b/vergangenesendungen/index.html
@@ -30,10 +30,13 @@
         <h1>Happy Birthday Show</h1>
         <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
         <h2>Vergangene Sendungen</h2>
+        <p><a href="https://happybirthdayshowhelsinki.github.io/31082022">31.08.2022</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/03082022">03.08.2022</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/06072022">06.07.2022</a></p>
-        <p><a href="https://happybirthdayshowhelsinki.github.io/08062022">08.06.2022</a></p>
         <h3 class="jahr">2022</h3>
+        <p><span class="datum">08.06.2022 - WH 22.06.2022:</span><br>Mit Jason Mraz, Ariana Grande, Ryan Tedder und Jennette McCurdy<br>
+            <a href="https://helsinki.at/program/111003" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a><br><a
+            href="https://cba.fro.at/561187" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
         <p><span class="datum">11.05.2022 - WH 25.05.2022:</span><br>Wiederholung vom 05.08.2020: Mit Helene Fischer, Carlos Vives,
             Shawn Mendes und Geri Halliwell<br><a href="https://helsinki.at/program/111002" target="_blank">Programmhinweis auf der
             Radio Helsinki Homepage</a><br><a href="https://cba.fro.at/461861" target="_blank">Sendung zum Nachhören auf der
