--- a/28092022/index.html
+++ b/28092022/index.html
@@ -34,7 +34,8 @@
         href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/111007" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute feiern wir mit Beyoncé, Flo Rida, Lukas Forchhammer von der Band Lukas Graham und Fiona Apple. Die Schauspielerin Michelle Williams
+      hatte am 9. September Geburtstag. Außerdem war am 15. September der Nationalfeiertag von Costa Rica.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
