--- a/26102022/index.html
+++ b/26102022/index.html
@@ -30,11 +30,14 @@
     <h1>Happy Birthday Show</h1>
     <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
     <h2><span class="wiederholung-2">Sendung am 26.10.2022 um 18:00 Uhr</span><span class="wiederholung-1">WH am 09.11. um 01:00 Uhr</span></h2>
-    <p>Sie können diese Sendung am 26.10.2022 von 18 bis 19 Uhr, sowie am 09.11.2022 von 1 bis 2 Uhr, in Graz auf der Frequenz 92,6 oder im <a
-        href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
+    <div class="col-md-6">
+      <iframe src="https://cba.fro.at/524717/embed?&waveform=false" width="100%" height="99"
+        style="border:none; width:100%; height:79px; margin-bottom: 10px;"></iframe>
+    </div>
     <p><a href="https://helsinki.at/program/111008" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Heute gibt es eine Wiederholung der Sendung vom 27.10.2020.</p>
+    <p><a href="https://cba.fro.at/524717" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
+    <p>Heute gibt es eine Wiederholung der Sendung vom 27.10.2021.</p>
     <p>"Heute feiern wir mit John Lennon von den Beatles, Jess Glynne, Bruno Mars und Dannii Minogue. Am 12. Oktober war der Nationalfeiertag
       von Spanien. Außerdem hatte der Maler Pablo Picasso am 25. Oktober Geburtstag."</p>
   </div>
