--- a/vergangenesendungen/index.html
+++ b/vergangenesendungen/index.html
@@ -30,10 +30,13 @@
         <h1>Happy Birthday Show</h1>
         <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
         <h2>Vergangene Sendungen</h2>
+        <p><a href="https://happybirthdayshowhelsinki.github.io/26102022">26.10.2022</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/28092022">28.09.2022</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/31082022">31.08.2022</a></p>
-        <p><a href="https://happybirthdayshowhelsinki.github.io/03082022">03.08.2022</a></p>
         <h3 class="jahr">2022</h3>
+        <p><span class="datum">03.08.2022 - WH 17.08.2022:</span><br>Mit Whitney Houston, Joe Jonas, Jonas Blue und Kina Grannis<br>
+            <a href="https://helsinki.at/program/111005" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a><br><a
+            href="https://cba.fro.at/568414" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
         <p><span class="datum">06.07.2022 - WH 20.07.2022:</span><br>Mit Jennifer Lopez, DJ Lumix, Luke Hemmings und Carolin Niemczyk<br>
             <a href="https://helsinki.at/program/111004" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a><br><a
             href="https://cba.fro.at/565617" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
