--- a/index.html
+++ b/index.html
@@ -80,8 +80,9 @@
     <h2>Wer moderiert die Happy Birthday Show?</h2>
     <div class="row">
       <div class="col-md-10">
-        <p>Die Happy Birthday Show wird vom 18-jährigen Christian Steinberger moderiert. Christian Steinberger besucht
-          derzeit das Bundesgymnasium GIBS in Graz-Eggenberg. Er ist der jüngste Sendungsmachende bei Radio Helsinki.
+        <p>Die Happy Birthday Show wird vom 18-jährigen Christian Steinberger moderiert. Christian Steinberger hat 2022
+          am Bundesgymnasium GIBS in Graz-Eggenberg maturiert und leistet derzeit Zivildienst am Standort West des LKH
+          Graz II. Er ist der jüngste Sendungsmachende bei Radio Helsinki.
           Neben der Happy Birthday Show moderiert er auch noch die Sendung <a
             href="https://helsinki.at/program/shows/christian-mix" target="_blank">Christian in the Mix</a>.</p>
       </div>
