--- a/index.html
+++ b/index.html
@@ -65,6 +65,18 @@
       </div>
     </div>
 
+    <div class="announcement-1 alert alert-success">
+      <h2 class="announcement-font">Jubiläumsausgabe: 23.11.2022 18:00 Uhr</h2>
+    </div>
+    <h3 class="announcement-2 announcement-font">Die Happy Birthday Show wird drei Jahre alt!</h3>
+    <p>Und wenn eine Geburtstags-Sendung Geburtstag hat, dann wird das gefeiert. Deshalb gibt es am 23. November eine
+      Jubiläumsausgabe, in der wir neben Musik von MusikerInnen die im November Geburtstag haben auch die drei
+      bekanntesten Hits aus dem letzten Jahr hören werden. Beginnen werden wir die Jubiläumsausgabe mit der ersten
+      Moderation der ersten Happy Birthday Show vom 1. Dezember 2019 und dem ersten Lied: Mat Kearney - Coming Home.
+      Mehr zur Jubiläumsausgabe finden Sie <a href="https://happybirthdayshowhelsinki.github.io/23112022">hier</a>.</p>
+    <div class="announcement-torte-div"><img class="announcement-torte-img" src="favicon/android-chrome-192x192.png"
+        alt="Happy Birthday"></div>
+
     <h2 class="firstHeading">Was ist die Happy Birthday Show?</h2>
     <p>Die Happy Birthday Show ist eine Sendung auf Radio Helsinki in Graz, die jeden vierten Mittwoch von 18 bis 19 Uhr
       zu hören ist (Wiederholung jeweils zwei Wochen später am Mittwoch von 1 bis 2 Uhr in der Früh). In jeder Sendung
