--- a/15032023/index.html
+++ b/15032023/index.html
@@ -19,7 +19,7 @@
   <meta name="msapplication-config" content="https://happybirthdayshowhelsinki.github.io/favicon/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
 
-  <title>Sendung am 31.08.2022 | Happy Birthday Show auf Radio Helsinki mit Christian Steinberger</title>
+  <title>Sendung am 15.03.2023 | Happy Birthday Show auf Radio Helsinki mit Christian Steinberger</title>
   <link rel="stylesheet" href="/styles/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="/styles/stylesheet.css">
@@ -29,16 +29,12 @@
   <div class="content">
     <h1>Happy Birthday Show</h1>
     <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
-    <h2><span class="wiederholung-2">Sendung am 31.08.2022 um 18:00 Uhr</span><span class="wiederholung-1">WH am 14.09. um 01:00 Uhr</span></h2>
-    <div class="col-md-6">
-      <iframe src="https://cba.fro.at/572769/embed?&waveform=false" width="100%" height="99"
-        style="border:none; width:100%; height:79px; margin-bottom: 10px;"></iframe>
-    </div>
-    <p><a href="https://helsinki.at/program/111006" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
-    </p>
-    <p><a href="https://cba.fro.at/572769" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
-    <p>Heute feiern wir mit Howie Dorough von den Backstreet Boys, Amy Macdonald, Felix Jaehn und Alizée. Am 25. August war der Nationalfeiertag
-      von Uruguay. Außerdem hatte der jamaikanische Sportler Usain Bolt am 21. August Geburtstag.</p>
+    <h2><span class="wiederholung-2">Sendung am 15.03.2023 um 18:00 Uhr</span><span class="wiederholung-1">WH am 29.03. um 01:00 Uhr</span></h2>
+    <p>Sie können diese Sendung am 15.03.2023 von 18 bis 19 Uhr, sowie am 29.03.2023 von 1 bis 2 Uhr, in Graz auf der Frequenz 92,6 oder im <a
+        href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
+    <!-- <p><a href="https://helsinki.at/program/111010" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
+    </p> -->
+    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
