--- a/23112022/index.html
+++ b/23112022/index.html
@@ -35,20 +35,20 @@
     <div class="announcement-1 alert alert-success" style="margin-top: 0;">
       <h2 class="announcement-font">Jubiläumsausgabe: 23.11.2022 18:00 Uhr</h2>
     </div>
-    <div style="text-align: center; margin-top: 15px;"><span class="alert alert-success"
+    <div style="text-align: center; margin-top: 15px; margin-bottom: 15px;"><span class="alert alert-success"
         style="border: none; border-radius: 20px; font-size: 20px; display: inline; padding: 5px;">WH am 07.12. um 01:00
         Uhr</span></div>
-    <h3 class="announcement-2 announcement-font">Die Happy Birthday Show wird drei Jahre alt!</h3>
+    <iframe src="https://cba.fro.at/586402/embed?&waveform=false" width="100%" height="99"
+    style="border:none; width:100%; height:79px; margin-bottom: 10px;"></iframe>
+    <h3 class="announcement-2 announcement-font" style="padding-top: 0;">Die Happy Birthday Show wird drei Jahre alt!</h3>
     <p>Und wenn eine Geburtstags-Sendung Geburtstag hat, dann wird das gefeiert. Deshalb gibt es am 23. November eine
       Jubiläumsausgabe, in der wir gemeinsam mit Herwig Rüdisser von Opus, David Guetta und Rita Ora feiern. Neben Musik von
       diesen MusikerInnen hören wir auch die drei bekanntesten Hits aus dem letzten Jahr. Beginnen werden wir die
       Jubiläumsausgabe mit der ersten Moderation der ersten Happy Birthday Show vom 1. Dezember 2019 und dem ersten Lied: Mat
       Kearney - Coming Home.</p>
-
     <p><a href="https://helsinki.at/program/111009" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
-    <p>Sie können die Jubiläumsausgabe am 23.11.2022 von 18 bis 19 Uhr, sowie am 07.12.2022 von 1 bis 2 Uhr, in Graz auf
-      der Frequenz 92,6 oder im <a href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.
     </p>
+    <p><a href="https://cba.fro.at/586402" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
