Keine Wiederholung mehr

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
   <title>Happy Birthday Show auf Radio Helsinki mit Christian Steinberger</title>
   <link rel="stylesheet" href="/styles/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <!-- <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css"> -->
+  <script src="https://kit.fontawesome.com/5bb5b2cc9c.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/styles/stylesheet.css">
 </head>
 
@@ -65,6 +67,20 @@
       </div>
     </div>
 
+    <div class="alert alert-warning" style="margin-top: 20px;">
+      <div class="row">
+        <div class="col-md-2" style="text-align: center; position: relative; vertical-align: bottom;">
+          <i class="fas fa-info exclamation-mark"></i>
+        </div>
+        <div class="col-md-10">
+          <p>Der vierwöchtenliche Wiederholungsslot der Happy Birthday Show in der Radio Helsinki Jugendnacht läuft mit Ende 2022 aus. Es gibt daher in Zukunft keine nächtliche Wiederholung der Happy Birthday Show mehr. Alle Sendungen sind aber natürlich weiterhin auf der <a href="https://cba.fro.at/series/happy-birthday-show" target="_blank">CBA-Plattform</a> zum Nachhören verfügbar.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="announcement-torte-div"><img class="announcement-torte-img" src="favicon/android-chrome-192x192.png"
+      alt="Happy Birthday"></div>
+
     <div class="announcement-1 alert alert-success">
       <h2 class="announcement-font">Jubiläumsausgabe: 23.11.2022 18:00 Uhr</h2>
     </div>
@@ -81,16 +97,15 @@
 
     <h2 class="firstHeading">Was ist die Happy Birthday Show?</h2>
     <p>Die Happy Birthday Show ist eine Sendung auf Radio Helsinki in Graz, die jeden vierten Mittwoch von 18 bis 19 Uhr
-      zu hören ist (Wiederholung jeweils zwei Wochen später am Mittwoch von 1 bis 2 Uhr in der Früh). In jeder Sendung
-      werden MusikerInnen vorgestellt, die im jeweiligen Monat Geburtstag haben. Von ihnen wird Musik gespielt,
-      dazwischen gibt es Informationen zu den MusikerInnen. Außerdem werden auch immer tagesaktuelle Themen besprochen.
+      zu hören ist. In jeder Sendung werden MusikerInnen vorgestellt, die im jeweiligen Monat Geburtstag haben. Von
+      ihnen wird Musik gespielt, dazwischen gibt es Informationen zu den MusikerInnen. Außerdem werden auch immer
+      tagesaktuelle Themen besprochen.
     </p>
     <h2>Wie kann ich die Happy Birthday Show anhören?</h2>
     <p>Jeden vierten Mittwoch ist die Happy Birthday Show von 18 bis 19 Uhr auf Radio Helsinki in Graz auf der Frequenz
-      92,6 und im <a href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> zu hören. Eine
-      Wiederholung der Sendungen gibt es am Mittwoch zwei Wochen später zwischen 1 und 2 Uhr in der Früh zu hören.
-      Sie können die Sendungen auch auf der <a href="https://cba.fro.at/series/happy-birthday-show"
-        target="_blank">CBA-Plattform</a> nachhören.</p>
+      92,6 und im <a href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> zu hören. Sie können die
+      Sendungen auch auf der <a href="https://cba.fro.at/series/happy-birthday-show" target="_blank">CBA-Plattform</a>
+      nachhören.</p>
     <h2>Wer moderiert die Happy Birthday Show?</h2>
     <div class="row">
       <div class="col-md-10">
@@ -109,9 +124,9 @@
       <li>Die erste Happy Birthday Show fand am 1. Dezember 2019 im Rahmen der Radio Helsinki Probebühne statt.</li>
       <li>Ihren fixen Platz im Radio Helsinki Programm hat die Happy Birthday Show seit dem 25. Dezember 2019.</li>
       <li>Seit dem 13. Mai 2020 hat die Happy Birthday Show einen eigenen Sendungs-Jingle.</li>
-      <li>Seit dem 28. April 2021 hat die Happy Birthday Show einen zusätzlichen Sendeplatz für Wiederholungen alle vier
-        Wochen am Mittwoch in der Früh und ist damit Teil der <a href="https://radiosendung.at/jugendnacht/"
-          target="_blank">Radio Helsinki Jugendnacht</a>.</li>
+      <li>Zwischen dem 28. April 2021 und dem 7. Dezember 2022 hatte die Happy Birthday Show einen zusätzlichen
+        Sendeplatz für Wiederholungen alle vier Wochen am Mittwoch in der Früh (1 bis 2 Uhr) und war damit Teil der Radio
+        Helsinki Jugendnacht.</li>
       <li>Seit dem 12. Mai 2021 werden MusikerInnen vorgestellt, die im jeweiligen Monat Geburtstag haben (und nicht wie
         bisher innerhalb einer Woche um den Sendetermin).</li>
     </ul>
