--- a/15032023/index.html
+++ b/15032023/index.html
@@ -29,8 +29,8 @@
   <div class="content">
     <h1>Happy Birthday Show</h1>
     <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
-    <h2><span class="wiederholung-2">Sendung am 15.03.2023 um 18:00 Uhr</span><span class="wiederholung-1">WH am 29.03. um 01:00 Uhr</span></h2>
-    <p>Sie können diese Sendung am 15.03.2023 von 18 bis 19 Uhr, sowie am 29.03.2023 von 1 bis 2 Uhr, in Graz auf der Frequenz 92,6 oder im <a
+    <h2>Sendung am 15.03.2023 um 18:00 Uhr</h2>
+    <p>Sie können diese Sendung am 15.03.2023 von 18 bis 19 Uhr in Graz auf der Frequenz 92,6 oder im <a
         href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <!-- <p><a href="https://helsinki.at/program/111010" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p> -->
