--- a/21122022/index.html
+++ b/21122022/index.html
@@ -34,7 +34,9 @@
         href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/111010" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute feiern wir mit Dermot Kennedy, Ellie Goulding, Gigi D'Agostino und Christina Aguilera. Der französische
+      Fußballspieler Kylian Mbappé hatte am 20. Dezember Geburtstag, er wurde bei der eben erst zu Ende gegangenen
+      Fußball-WM Torschützenkönig. Außerdem war am 6. Dezember der Nationalfeiertag von Finnland.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
