--- a/index.html
+++ b/index.html
@@ -73,7 +73,11 @@
           <i class="fas fa-info exclamation-mark"></i>
         </div>
         <div class="col-md-10">
-          <p>Der vierwöchtenliche Wiederholungsslot der Happy Birthday Show in der Radio Helsinki Jugendnacht läuft mit Ende 2022 aus. Es gibt daher in Zukunft keine nächtliche Wiederholung der Happy Birthday Show mehr. Alle Sendungen sind aber natürlich weiterhin auf der <a href="https://cba.fro.at/series/happy-birthday-show" target="_blank">CBA-Plattform</a> zum Nachhören verfügbar.</p>
+          <p>Der vierwöchtenliche Wiederholungsslot der Happy Birthday Show in der Radio Helsinki Jugendnacht
+            läuft mit Ende 2022 aus. Es gibt daher in Zukunft keine nächtliche Wiederholung der Happy Birthday
+            Show mehr. Alle Sendungen sind aber natürlich weiterhin auf der <a
+            href="https://cba.fro.at/series/happy-birthday-show" target="_blank">CBA-Plattform</a> zum Nachhören
+            verfügbar.</p>
         </div>
       </div>
     </div>
