--- a/vergangenesendungen/index.html
+++ b/vergangenesendungen/index.html
@@ -30,10 +30,13 @@
         <h1>Happy Birthday Show</h1>
         <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
         <h2>Vergangene Sendungen</h2>
+        <p><a href="https://happybirthdayshowhelsinki.github.io/21122022">21.12.2022</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/23112022">23.11.2022</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/26102022">26.10.2022</a></p>
-        <p><a href="https://happybirthdayshowhelsinki.github.io/28092022">28.09.2022</a></p>
         <h3 class="jahr">2022</h3>
+        <p><span class="datum">28.09.2022 - WH 12.10.2022:</span><br>Mit Beyoncé, Flo Rida, Lukas Forchhammer und Fiona Apple<br><a
+            href="https://helsinki.at/program/111007" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a><br><a
+            href="https://cba.fro.at/576761" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
         <p><span class="datum">31.08.2022 - WH 14.09.2022:</span><br>Mit Howie Dorough, Amy Macdonald, Felix Jaehn und Alizée<br><a
             href="https://helsinki.at/program/111006" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a><br><a
             href="https://cba.fro.at/572769" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
