--- a/21122022/index.html
+++ b/21122022/index.html
@@ -30,10 +30,13 @@
     <h1>Happy Birthday Show</h1>
     <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
     <h2>Sendung am 21.12.2022 um 18:00 Uhr</h2>
-    <p>Sie können diese Sendung am 21.12.2022 von 18 bis 19 Uhr in Graz auf der Frequenz 92,6 oder im <a
-        href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
+    <div class="col-md-6">
+      <iframe src="https://cba.fro.at/591948/embed?&waveform=false" width="100%" height="99"
+        style="border:none; width:100%; height:79px; margin-bottom: 10px;"></iframe>
+    </div>
     <p><a href="https://helsinki.at/program/111010" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
+    <p><a href="https://cba.fro.at/591948" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
     <p>Heute feiern wir mit Dermot Kennedy, Ellie Goulding, Gigi D'Agostino und Christina Aguilera. Der französische
       Fußballspieler Kylian Mbappé hatte am 20. Dezember Geburtstag, er wurde bei der eben erst zu Ende gegangenen
       Fußball-WM Torschützenkönig. Außerdem war am 6. Dezember der Nationalfeiertag von Finnland.</p>
