--- a/18012023/index.html
+++ b/18012023/index.html
@@ -34,7 +34,9 @@
         href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/120807" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute feiern wir mit Nico Santos, Alicia Keys, Justin Timberlake und Estelle. Der englische Physiker Isaac Newton
+      wurde am 4. Jänner 1643 geboren, er gilt als einer der bedeutendsten Wissenschaftler aller Zeiten. Außerdem war am
+      18. Jänner Welttag des Schneemanns.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
