--- a/vergangenesendungen/index.html
+++ b/vergangenesendungen/index.html
@@ -30,10 +30,13 @@
         <h1>Happy Birthday Show</h1>
         <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
         <h2>Vergangene Sendungen</h2>
+        <p><a href="https://happybirthdayshowhelsinki.github.io/15022023">15.02.2023</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/18012023">18.01.2023</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/21122022">21.12.2022</a></p>
-        <p><a href="https://happybirthdayshowhelsinki.github.io/23112022">23.11.2022</a></p>
         <h3 class="jahr">2022</h3>
+        <p><span class="datum">23.11.2022 - WH 07.12.2022:</span><br>Jubiläumsausgabe: Mit Herwig Rüdisser, David Guetta und Rita Ora
+            <br><a href="https://helsinki.at/program/111009" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a><br>
+            <a href="https://cba.fro.at/586402" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
         <p><span class="datum">26.10.2022 - WH 09.11.2022:</span><br>Wiederholung vom 27.10.2021: Mit John Lennon, Jess Glynne, Bruno
             Mars und Dannii Minogue<br><a href="https://helsinki.at/program/111008" target="_blank">Programmhinweis auf der Radio
             Helsinki Homepage</a><br><a href="https://cba.fro.at/524717" target="_blank">Sendung zum Nachhören auf der
