--- a/15032023/index.html
+++ b/15032023/index.html
@@ -34,9 +34,9 @@
         href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/120809" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Heute feiern wir mit Aretha Franklin, Chris Martin von Coldplay, Bon Jovi und Tina Naderer. Am 2. März hatte
-      Marcel Hirscher Geburtstag, er zählt zu den bekanntesten Skifahrern Österreichs. Außerdem ist am 17. März in
-      Irland der "Saint Patrick's Day".</p>
+    <p>Heute feiern wir mit Aretha Franklin, Chris Martin von Coldplay, Jon Bon Jovi von Bon Jovi und Tina Naderer. Am
+      2. März hatte Marcel Hirscher Geburtstag, er zählt zu den bekanntesten Skifahrern Österreichs. Außerdem ist am
+      17. März in Irland der "Saint Patrick's Day".</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
