--- a/15032023/index.html
+++ b/15032023/index.html
@@ -30,10 +30,13 @@
     <h1>Happy Birthday Show</h1>
     <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
     <h2>Sendung am 15.03.2023 um 18:00 Uhr</h2>
-    <p>Sie können diese Sendung am 15.03.2023 von 18 bis 19 Uhr in Graz auf der Frequenz 92,6 oder im <a
-        href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
+    <div class="col-md-6">
+      <iframe src="https://cba.fro.at/612943/embed?&waveform=false" width="100%" height="99"
+        style="border:none; width:100%; height:79px; margin-bottom: 10px;"></iframe>
+    </div>
     <p><a href="https://helsinki.at/program/120809" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
+    <p><a href="https://cba.fro.at/612943" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
     <p>Heute feiern wir mit Aretha Franklin, Chris Martin von Coldplay, Jon Bon Jovi von Bon Jovi und Tina Naderer. Am
       2. März hatte Marcel Hirscher Geburtstag, er zählt zu den bekanntesten Skifahrern Österreichs. Außerdem ist am
       17. März in Irland der "Saint Patrick's Day".</p>
