--- a/05072023/index.html
+++ b/05072023/index.html
@@ -34,7 +34,10 @@
       href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/120813" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute gibt es eine Wiederholung der Sendung vom 07.07.2021.</p>
+    <p>"Heute feiern wir mit Selena Gomez, Jason Wade von Lifehouse, Hugo Helmig und Stefanie Werger. Am 14. Juli ist
+      der Nationalfeiertag in Frankreich. Außerdem hat der österreichische Fußballspieler Saša Kalajdžić, der beim
+      EM-Achtelfinale das Tor gegen Italien erzielt hat, heute Geburtstag."</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
