--- a/30082023/index.html
+++ b/30082023/index.html
@@ -34,7 +34,9 @@
       href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/120815" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute feiern wir mit Malik Harris, Bebe Rexha, Alan Walker und Lea Michele. Der Schauspieler Rupert Grint hatte
+      am 24. August Geburtstag, er wurde als Ron in Harry Potter bekannt. Außerdem war am 17. August der Nationalfeiertag
+      von Indonesien.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
