--- a/27092023/index.html
+++ b/27092023/index.html
@@ -34,7 +34,8 @@
       href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/120816" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute feiern wir mit Liam Gallagher von Oasis, Alessandra Mele, Chesney Hawkes und Halsey. Am 1. September 1956
+      wurde der weltweit erste Blitzer vorgestellt. Außerdem war am 24. September der Tag der Satzzeichen.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
