--- a/vergangenesendungen/index.html
+++ b/vergangenesendungen/index.html
@@ -30,10 +30,14 @@
         <h1>Happy Birthday Show</h1>
         <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
         <h2>Vergangene Sendungen</h2>
+        <p><a href="https://happybirthdayshowhelsinki.github.io/27092023">27.09.2023</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/30082023">30.08.2023</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/02082023">02.08.2023</a></p>
-        <p><a href="https://happybirthdayshowhelsinki.github.io/05072023">05.07.2023</a></p>
         <h3 class="jahr">2023</h3>
+        <p><span class="datum">05.07.2023:</span><br>Wiederholung vom 07.07.2021: Mit Selena Gomez, Jason Wade, Hugo Helmig und
+            Stefanie Werger<br><a href="https://helsinki.at/program/120813" target="_blank">Programmhinweis auf der Radio
+            Helsinki Homepage</a><br><a href="https://cba.fro.at/508047" target="_blank">Sendung zum Nachhören auf der
+            CBA-Plattform</a></p>
         <p><span class="datum">07.06.2023:</span><br>Mit Danny Wilde, Alexandra Stan, Dennis Lloyd und Lucy Hale<br><a
             href="https://helsinki.at/program/120812" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a><br><a
             href="https://cba.fro.at/622797" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
