--- a/25102023/index.html
+++ b/25102023/index.html
@@ -34,7 +34,8 @@
       href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/120817" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute feiern wir mit Gwen Stefani von No Doubt, Max Giesinger, Dean Lewis und Wanda Jackson. Am 1. Oktober war
+      der Nationalfeiertag von Zypern. Außerdem ist am 28. Oktober der US-amerikanische Umarme-Ein-Schaf-Tag.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
