Zivildienst weg + Studium

--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
     <div class="row">
       <div class="col-md-10">
         <p>Die Happy Birthday Show wird vom 19-jährigen Christian Steinberger moderiert. Christian Steinberger hat 2022
-          am Bundesgymnasium GIBS in Graz-Eggenberg maturiert und leistet derzeit Zivildienst am Standort West des LKH
-          Graz II. Er ist der jüngste Sendungsmachende bei Radio Helsinki.
-          Neben der Happy Birthday Show moderiert er auch noch die Sendung <a
-            href="https://helsinki.at/program/shows/christian-mix" target="_blank">Christian in the Mix</a>.</p>
+          am Bundesgymnasium GIBS in Graz-Eggenberg maturiert und studiert derzeit Journalismus & Medienmanagement an der
+          FH Wien der WKW. Er ist der jüngste Sendungsmachende bei Radio Helsinki. Neben der Happy Birthday Show moderiert
+          er auch noch die Sendung <a href="https://helsinki.at/program/shows/christian-mix" target="_blank">Christian in
+          the Mix</a>.</p>
       </div>
       <div class="col-md-2 text-center">
         <img src="galerie/profilbild.jpg" alt="Profilbild" id="profilbild">
