--- a/13032024/index.html
+++ b/13032024/index.html
@@ -34,7 +34,8 @@
       href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/130410" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute feiern wir mit Diana Ross, Nik Kershaw, Céline Dion und Nicky Jam. Der deutsche Fußballspieler Manuel
+      Neuer hat am 27. März Geburtstag. Außerdem wurde am 20. März 1591 die Rialtobrücke in Venedig eröffnet.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
