--- a/vergangenesendungen/index.html
+++ b/vergangenesendungen/index.html
@@ -30,9 +30,14 @@
         <h1>Happy Birthday Show</h1>
         <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
         <h2>Vergangene Sendungen</h2>
+        <p><a href="https://happybirthdayshowhelsinki.github.io/10042024">10.04.2024</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/13032024">13.03.2024</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/14022024">14.02.2024</a></p>
-        <p><a href="https://happybirthdayshowhelsinki.github.io/17012024">17.01.2024</a></p>
+        <h3 class="jahr">2024</h3>
+        <p><span class="datum">17.01.2024:</span><br>Wiederholung vom 19.01.2022: Mit Alvaro Soler, Mark Forster, Lisa Pac und
+            Janis Joplin<br><a href="https://helsinki.at/program/130408" target="_blank">Programmhinweis auf der Radio Helsinki
+            Homepage</a><br><a href="https://cba.fro.at/537857" target="_blank">Sendung zum Nachhören auf der CBA-Plattform
+            </a></p>
         <h3 class="jahr">2023</h3>
         <p><span class="datum">20.12.2023:</span><br>Mit Joseph Washbourn, Mette Lindberg, Frans und Nelly Furtado<br><a
             href="https://helsinki.at/program/120819" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a><br><a
