--- a/08052024/index.html
+++ b/08052024/index.html
@@ -34,7 +34,8 @@
       href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/130412" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute feiern wir mit Bob Dylan, Pia Maria, Martin Garrix und Birdy. Der spanische Tennisspieler Carlos Alcarez
+      hatte am 5. Mai Geburtstag. Ebenfalls am 5. Mai war außerdem der Weltlachtag.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
