--- a/03072024/index.html
+++ b/03072024/index.html
@@ -34,7 +34,8 @@
       href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/130414" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute feiern wir mit Toby Keith, Leah McFall, Debbie Harry von Blondie und Beck. Der österreichische
+      Skirennläufer Hannes Reichelt hat am 5. Juli Geburtstag. Außerdem ist heute am 3. Juli der Tag der Erdmännchen.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
