--- a/31072024/index.html
+++ b/31072024/index.html
@@ -34,7 +34,9 @@
       href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/130415" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute feiern wir mit Geddy Lee von Rush, Paloma Faith, Carlos Santana von der Band Santana und Alison Krauss. Am
+      21. Juli war der Nationalfeiertag von Belgien. Außerdem hat heute am 31. Juli die Autorin von Harry Potter, J.K.
+      Rowling Geburtstag.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
