--- a/vergangenesendungen/index.html
+++ b/vergangenesendungen/index.html
@@ -30,10 +30,14 @@
         <h1>Happy Birthday Show</h1>
         <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
         <h2>Vergangene Sendungen</h2>
+        <p><a href="https://happybirthdayshowhelsinki.github.io/28082024">28.08.2024</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/31072024">31.07.2024</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/03072024">03.07.2024</a></p>
-        <p><a href="https://happybirthdayshowhelsinki.github.io/05062024">05.06.2024</a></p>
         <h3 class="jahr">2024</h3>
+        <p><span class="datum">05.06.2024:</span><br>Wiederholung vom 07.06.2023: Mit Danny Wilde, Alexandra Stan, Dennis Lloyd
+            und Lucy Hale<br><a href="https://helsinki.at/program/130413" target="_blank">Programmhinweis auf der Radio
+            Helsinki Homepage</a><br><a href="https://cba.fro.at/622797" target="_blank">Sendung zum Nachhören auf der
+            CBA-Plattform</a></p>
         <p><span class="datum">08.05.2024:</span><br>Mit Bob Dylan, Pia Maria, Martin Garrix und Birdy<br><a
             href="https://helsinki.at/program/130412" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a><br><a
             href="https://cba.fro.at/660940" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
