--- a/25092024/index.html
+++ b/25092024/index.html
@@ -34,7 +34,8 @@
       href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/130417" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute feiern wir mit Bruce Springsteen, Zendaya, Mark Ronson und Gloria Estefan. Der Autor Stephan King hatte am
+      21. September Geburtstag. Außerdem war am 9. September der internationale Sudoku-Tag.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
