--- a/index.html
+++ b/index.html
@@ -65,6 +65,16 @@
       </div>
     </div>
 
+    <div class="announcement-1 alert alert-success">
+      <h2 class="announcement-font">Jubiläumsausgabe: 20.11.2024 18:00 Uhr</h2>
+    </div>
+    <h3 class="announcement-2 announcement-font">5 Jahre Happy Birthday Show</h3>
+    <p>Obwohl man es kaum glauben mag, aber die erste Happy Birthday Show ist mittlerweile fünf Jahre her. Deshalb gibt
+      es am 20. November die 5-Jahres-Jubiläumsausgabe, mit einem ganz speziellen Programm. Mehr Infos zur Jubiläumsausgabe
+      gibt es <a href="https://happybirthdayshowhelsinki.github.io/20112024">hier</a>.</p>
+    <div class="announcement-torte-div"><img class="announcement-torte-img" src="favicon/android-chrome-192x192.png"
+      alt="Happy Birthday"></div>
+
     <h2 class="firstHeading">Was ist die Happy Birthday Show?</h2>
     <p>Die Happy Birthday Show ist eine Sendung auf Radio Helsinki in Graz, die jeden vierten Mittwoch von 18 bis 19 Uhr
       zu hören ist. In jeder Sendung werden MusikerInnen vorgestellt, die im jeweiligen Monat Geburtstag haben. Von
