--- a/20112024/index.html
+++ b/20112024/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+
   <link rel="apple-touch-icon" sizes="180x180"
     href="https://happybirthdayshowhelsinki.github.io/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32"
@@ -19,7 +21,7 @@
   <meta name="msapplication-config" content="https://happybirthdayshowhelsinki.github.io/favicon/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
 
-  <title>Sendung am 20.11.2024 | Happy Birthday Show auf Radio Helsinki mit Christian Steinberger</title>
+  <title>Jubiläumsausgabe am 20.11.2024 | Happy Birthday Show auf Radio Helsinki mit Christian Steinberger</title>
   <link rel="stylesheet" href="/styles/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="/styles/stylesheet.css">
@@ -29,12 +31,21 @@
   <div class="content">
     <h1>Happy Birthday Show</h1>
     <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
-    <h2>Sendung am 20.11.2024 um 18:00 Uhr</h2>
-    <p>Sie können diese Sendung am 20.11.2024 von 18 bis 19 Uhr in Graz auf der Frequenz 92,6 oder im <a
-      href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
+    <div class="announcement-1 alert alert-success" style="margin-top: 0;">
+      <h2 class="announcement-font">Jubiläumsausgabe: 20.11.2024 18:00 Uhr</h2>
+    </div>
+    <h3 class="announcement-2 announcement-font">5 Jahre Happy Birthday Show</h3>
+    <p>Obwohl man es kaum glauben mag, aber die erste Happy Birthday Show ist mittlerweile fünf Jahre her. Das feiern
+      wir mit einer ganz speziellen Jubiläumsausgabe. Ausnahmsweise gibt es keine Musikerinnen und Musiker, die
+      Geburtstag haben. Stattdessen geht es zuerst um die Geschichte und die Entstehung der Happy Birthday Show und
+      auch um die allererste Ausgabe vom 01.12.2019, aus der wir uns auch Ausschnitte und Songs anhören.</p>
+    <p>In der zweiten Hälfte der Sendung erkunden wir dann Geburtstagstraditionen aus aller Welt. Wie feiert man
+      anderswo Geburtstag? Dazu passend eine Geburtstags-Playlist, mit Songs in denen es um Geburtstag und ums Feiern
+      geht.</p>
     <p><a href="https://helsinki.at/program/130419" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Sie können die Jubiläumsausgabe am 20.11.2024 von 18 bis 19 Uhr in Graz auf der Frequenz 92,6 oder im <a
+      href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
