--- a/18122024/index.html
+++ b/18122024/index.html
@@ -34,7 +34,9 @@
       href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/130420" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute feiern wir mit Alannah Myles, Axwell, Nathan Evans und Eva Briegel von der Band Juli. Der ehemalige
+      österreichische Skirennläufer Hermann Maier hatte am 7. Dezember Geburtstag. Außerdem war am 2. Dezember der Tag
+      der Modelleisenbahn.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
