--- a/15012025/index.html
+++ b/15012025/index.html
@@ -30,10 +30,13 @@
     <h1>Happy Birthday Show</h1>
     <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
     <h2>Sendung am 15.01.2025 um 18:00 Uhr</h2>
-    <p>Sie können diese Sendung am 15.01.2025 von 18 bis 19 Uhr in Graz auf der Frequenz 92,6 oder im <a
-      href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
+    <div class="col-md-6">
+      <iframe src="https://cba.fro.at/692591/embed?&waveform=false" width="100%" height="99"
+        style="border:none; width:100%; height:79px; margin-bottom: 10px;"></iframe>
+    </div>
     <p><a href="https://helsinki.at/program/138217" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
+    <p><a href="https://cba.fro.at/692591" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
     <p>Heute feiern wir mit Aloe Blacc, Jamelia, Ti&#235;sto und Pixie Lott. Der bekannte Komiker und Schauspieler Rowan
       Atkinson hatte am 6. Jänner Geburtstag, er wurde als Mr. Bean bekannt. Außerdem ist am 28. Jänner der europäische
       Datenschutztag.</p>
