--- a/12022025/index.html
+++ b/12022025/index.html
@@ -34,7 +34,10 @@
       href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/138218" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute gibt es eine Wiederholung der Sendung vom 15.02.2023.</p>
+    <p>"Heute feiern wir mit Axl Rose von Guns n' Roses, Emma Roberts, James Blunt und Sasha Pieterse. Der
+      argentinische Fußballspieler Angel Di Maria hatte gestern am 14. Februar Geburtstag. Außerdem ist am 24. Februar
+      der Nationalfeiertag von Estland."</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
