--- a/09042025/index.html
+++ b/09042025/index.html
@@ -34,7 +34,8 @@
       href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/138220" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute feiern wir mit Sophie Ellis-Bextor, Robin Schulz, Caro Emerald und Sebastian Ingrosso. Der deutsche
+      Schauspieler Bully Herbig hat am 29. April Geburtstag. Am 11. April war außerdem der Tag der Haustiere.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
