--- a/07052025/index.html
+++ b/07052025/index.html
@@ -34,7 +34,10 @@
       href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/138221" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute gibt es eine Wiederholung der Sendung vom 10.05.2023.</p>
+    <p>"Heute feiern wir mit Adele, Klaus Meine von den Scorpions, Ray Dalton und Lena Meyer-Landrut. Heute in einer
+      Woche am 17. Mai ist der Nationalfeiertag von Norwegen. Außerdem hat der österreichische Skispringer Stefan Kraft
+      am 13. Mai Geburtstag."</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
