--- a/27082025/index.html
+++ b/27082025/index.html
@@ -34,7 +34,8 @@
       href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/138225" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute feiern wir mit Demi Lovato, James Morrison, Mika und Kacey Musgraves. Der polnische Fußballprofi Robert
+      Lewandowski hatte am 21. August Geburtstag. Außerdem war am 6. August der Nationalfeiertag von Jamaika.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
